<resources>
    <string name="app_name">Alcool ou Gasolina</string>


    <string name="menu_home">Home</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_compartilhe">Compartilhar</string>
    <string name="menu_ajuda">Ajuda</string>
    <string name="menu_avalie">Avalie</string>
    <string name="menu_adicionar">Adicionar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>